postupny tok stavov terminu cez tlacidla + povinny dovod pri nespôsobilom termine + fix nacitania darcu (mock)
